﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-11-29 Michal Čihař  <michal@cihar.com>
    * lang/sync_lang.sh: Add workaround for multibyte chars that can contain \
      as last byte.
    * lang/japanese: Update, thanks to Tadashi Jokagi - elf2000.
    * lang/czech: Update.

2005-11-29 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_change.php, libraries/tbl_replace_fields.inc.php:
      bug #1367549, handling of CURRENT_TIMESTAMP

2005-11-29 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/common.lib.php
      - added PMA_setCookie() and PMA_removeCookie()
    * index.php, libraries/common.lib.php:
      - moved setting of cookies from index.php into common.lib.php
    * index.php
      - revised the parameter passing code
      - make use of new functionality of PMA_generate_common_url()
    * css/phpmyAdmin.css.php:
      - removed some unused deprecated elements
    * libraries/Theme.class.php, libraries/Theme_Manager.class.php:
      - added some functionality
      - added PMA_Theme_Manager::printPreviews() and PMA_Theme::printPreview()
    * main.php, css/phpmyAdmin.css.php, libraries/common.lib.php,
      index.php, libraries/auth/config.auth.lib.php,
      libraries/auth/cookie.auth.lib.php, themes.php, test/theme.php:
      - make use of new PMA_Theme and PMA_Theme_Manager classes
      - remove libraries/select_theme.lib.php
    * libraries/Config.class.php:
      new class for handling config

2005-11-28 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/italian: update, thanks to Luca Rebellato

2005-11-28 Michal Čihař  <michal@cihar.com>
    * scripts/setup.php:
        - Don't allow loading of configuration if there is no write permission
          on config.
        - Add links to documentation.
        - Document all functions.
        - Warn about missing mbstring and old PHP version.
        - Display all warnings in one place.